# letterboxd-clone

./: CMakeLists.txt  README.md  main.cpp
.github/actions/configure-cmake/: action.yml
.github/workflows/: cmake.yml
clase/: Admin.cpp  Admin.h  Critic.cpp  Critic.h  EvaluareException.h  Evaluari.cpp  Evaluari.h  Film.cpp  Film.h  Lista.cpp  Lista.h  RecenzieException.cpp  Recenzii.cpp  Recenzii.h  Utilizator.cpp  Utilizator.h
include/: Admin.h  Collection.h  Critic.h  EvaluareException.h  Evaluari.h  Film.h  Lista.h  RecenzieException.h  Recenzii.h  Utilizator.h  UtilizatorAbstract.h  UtilizatorFactory.h
src/: Admin.cpp  Critic.cpp  Evaluari.cpp  Film.cpp  Lista.cpp  RecenzieException.cpp  Recenzii.cpp  Utilizator.cpp  UtilizatorAbstract.cpp  UtilizatorFactory.cpp  example.cpp
test/example/: example_test.cpp
